Update notebook files (ipynb/html) to include cells that display pandas tables (#4)

--- a/hyperopt_tips_and_tricks/interative_visualization_of_hyperopt_trials_with_plotly/interactive_visualization_of_hyperopt_trials_with_plotly.ipynb
+++ b/hyperopt_tips_and_tricks/interative_visualization_of_hyperopt_trials_with_plotly/interactive_visualization_of_hyperopt_trials_with_plotly.ipynb
@@ -52,6 +52,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "boston_dataset_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define constant strings that we will use as keys in the “search space” dictionary below. Note that\n",
     "# the convention I use throughout is to represent the characters in the string with a variable that\n",
     "# matches that string except that the characters in the variable are capitalized. This convention\n",
@@ -239,8 +248,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
+    "trials_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# px is an alias for \"express\" that's created by following the convention of importing \"express\" by\n",
     "# running `from plotly import express as px`\n",
     "fig = px.scatter(trials_df, x=\"trial_number\", y=\"loss\")\n",
@@ -347,20 +363,6 @@
     "\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -379,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
